--- a/calculator.css
+++ b/calculator.css
@@ -8,7 +8,7 @@
 }
 
 body{
-:"https://www.google.com/url?sa=i&url=https%3A%2F%2F4kwallpapers.com%2Fabstract%2Fdark-background-abstract-background-network-3d-background-8324.html&psig=AOvVaw2Yx-Kk2FVe5U9bwTJVfyzG&ust=1708509051836000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCMCXt4HSuYQDFQAAAAAdAAAAABAE";
+:"https://www.google.com/url?sa=i&url=https%3A%2F%2F4kwallpapers.com%2Fnature%2Fgreen-leaves-ferns-leaf-background-spring-closeup-5k-2445.html&psig=AOvVaw3x4imQXylpUwRJmRDyCrHE&ust=1719853665002000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCOD1sqvog4cDFQAAAAAdAAAAABAJ";
     width: 100%;
     height: 100vh;
     display: flex;
