--- a/calculator.css
+++ b/calculator.css
@@ -8,7 +8,7 @@
 }
 
 body{
-:"https://www.google.com/url?sa=i&url=https%3A%2F%2F4kwallpapers.com%2Fnature%2Fgreen-leaves-ferns-leaf-background-spring-closeup-5k-2445.html&psig=AOvVaw3x4imQXylpUwRJmRDyCrHE&ust=1719853665002000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCOD1sqvog4cDFQAAAAAdAAAAABAJ";
+:"/Project-Calculator/green-leaves-ferns-leaf-background-spring-closeup-5k-2560x1440-2445.jpg";
     width: 100%;
     height: 100vh;
     display: flex;
